Add success_message and failure_message helpers from beankeeper
- Create NoticeI18n concern with i18n-based flash message helpers
- Add default i18n translations for create/update/destroy actions
- Include NoticeI18n in ApplicationController

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,3 +34,12 @@ en:
       title:
         one: An error prohibited this %{name} from being saved
         other: "%{count} errors prohibited this %{name} from being saved"
+    create:
+      success: "%{name} created successfully!"
+      failure: "%{name} could not be created."
+    update:
+      success: "%{name} updated successfully!"
+      failure: "%{name} could not be updated."
+    destroy:
+      success: "%{name} deleted successfully!"
+      failure: "%{name} could not be deleted."
